[2단계 - 로그인 구현하기] 도기(이동엽) 미션 제출합니다. (#922)
* refactor: [1단계 피드백] 리소스 읽는 방식 변경

- 기존의 방식은 로컬에서는 동작하지만 JAR 환경에서 동작하지 않을 수 있음
- 일관된 동작을 위해서 Paths 객체 사용

* feat: resource null 검증 추가

* refactor: 변경된 리소스 읽기 로직 반영

* fix: 잘못된 메서드 선언으로 cssResponse를 만들지 못하던 문제 해결

* refactor: [1단계 피드백] acoount를 가져오는 로직 간소화 및 변수 네이밍 명확하게 변경

* feat: [1단계 피드백] /login 경로 접근 추가

* fix: [1단계 피드백] .css writeAndFlush 후 return 하도록 변경

- .css를 flush 후 return 하지 않아 하나의 요청에 두개의 응답이 발생하는 문제가 있었음

* refactor: [1단계 피드백] Content-Type을 상수화 하여 중복 메서드 제거

* feat: 1. HTTP Status Code 302 구현

* fix: 리다이렉션 메서드 responseBody 제거

* fix: 리다이렉션 메서드 responseBody 제거

* feat: 2. POST 방식으로 회원가입 구현

* feat: 3. Cookie에 JSESSIONID 값 저장하기 구현

* refactor: HttpCookie 클래스로 쿠키 생성 책임 분리

- JSESSIONID 쿠키 생성을 HttpCookie.createCookie 메서드로 이동
- Http11Processor에서 중복된 쿠키 생성 코드 제거

* feat: 4. Session 구현하기 구현

- Session 및 SessionManager 클래스 구현
- SessionManager로 세션 생성 및 조회 기능 추가
- /login 경로에서 세션 확인 후 리다이렉션 처리
- 사용자 로그인 시 세션 저장 및 JSESSIONID 쿠키 설정
- HTTP 요청 헤더에서 세션 ID 읽어오는 로직 추가

* test: Thread 학습 테스트 추가

* refactor: createUser 메서드 파라미터 순서 변경

- createUser(account, email, password) -> createUser(account, password, email)로 수정
- User 생성자 호출 시 변경된 순서 적용
- Http11Processor 내 관련 코드 수정

* refactor: 로그인 요청 처리 방식 GET -> POST 변경

- /login 경로의 HTTP 메서드 변경 (GET -> POST)
- login.html에서 로그인 form의 method를 POST로 수정
- 요청 본문(requestBody)에서 로그인 계정과 비밀번호 파싱하도록 수정
- 불필요한 queryString 처리 로직 제거